--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 .DS_Store
+csse_covid_19_data/csse_covid_19_time_series/covid_predictions.nb.html
+csse_covid_19_data/csse_covid_19_time_series/covid_predictions.Rmd
